# simulated_annealing

./: .gitignore  CMakeLists.txt  Makefile  analyze_results_consistent.sh  heapmap_creator.py  input.csv  run_research_consistent.sh  run_research_parallel.sh  task.tex  Задание2_имитация_отжига.txt
research/: analyze_results_consistent.sh  analyze_results_parallel.sh  cooling_low_compare.txt  graph_creator.py  heapmap_creator.py  results_consistent.csv  results_parallel.txt  run_research_consistent.sh  run_research_parallel.sh
results/: results_consistent.csv
src/: BoltzmannCooling.cpp  BoltzmannCooling.h  CSVDataGenerator.cpp  CSVDataGenerator.h  CSVDataReader.cpp  CSVDataReader.h  CauchyCooling.cpp  CauchyCooling.h  ICoolingLaw.cpp  ICoolingLaw.h  IDataGenerator.cpp  IDataGenerator.h  IDataReader.cpp  IDataReader.h  IMutation.cpp  IMutation.h  ISolution.h  LogarithmicCooling.cpp  LogarithmicCooling.h  Logger.cpp  Logger.h  ParallelSimulatedAnnealing.cpp  ParallelSimulatedAnnealing.h  ScheduleMutation.cpp  ScheduleMutation.h  ScheduleSolution.cpp  ScheduleSolution.h  SimulatedAnnealing.cpp  SimulatedAnnealing.h  SolutionGenerator.cpp  SolutionGenerator.h  main.cpp
